Fix auth hint misalignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -558,25 +558,14 @@ input.credentials-input {
   background-color: #2212385e;
 }
 
-.auth-btn:hover .auth-btn-loader {
-  border: 3px solid var(--text-color);
-  border-bottom-color: #6626b4;
-}
-
-.auth-btn-on-loading {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: not-allowed;
-}
-
 .auth-btn-loader {
   width: 20px;
   height: 20px;
-  border: 3px solid var(--accent);
-  border-bottom-color: transparent;
+  border: 3px solid var(--text-color);
+  border-bottom-color: #6626b4;
   border-radius: 50%;
   margin-right: 7px;
+  vertical-align: text-top;
   display: inline-block;
   box-sizing: border-box;
   animation: rotation 0.8s linear infinite;
@@ -596,7 +585,7 @@ input.credentials-input {
   display: flex;
   gap: 5px;
   justify-content: center;
-  margin: 10px 0 0;
+  margin-top: 10px;
   font-size: 20px;
 }
 
